--- a/nginx-site.conf
+++ b/nginx-site.conf
@@ -15,5 +15,7 @@ server {
         include fastcgi_params;
         fastcgi_param SCRIPT_FILENAME $document_root$fastcgi_script_name;
         fastcgi_param PATH_INFO $fastcgi_path_info;
+        fastcgi_param HTTP_X_FORWARDED_FOR $http_x_forwarded_for;
+        fastcgi_param HTTP_X_REAL_IP $http_x_real_ip;
     }
 }
